objects/NGO_Grants_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Award</label>
        <referenceTo>FundingAward</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Application</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Milestone</label>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>